# PCS

esercitazione1/: CMakeLists.txt  media_t.cpp
esercitazione2/: Bubblesort.cpp  CMakeLists.txt  Figura1.cpp  primialgoritmi.cpp
esercitazione3/: CMakeLists.txt  main.cpp  rational.hpp
esercitazione4/: Bubblesort.hpp  CMakeLists.txt  Insertionsort.hpp  Selectionsort.hpp  is_sorted.hpp  measure_sorts.cpp  test_Bubblesort.cpp  test_Insertionsort.cpp  test_Selectionsort.cpp
esercitazione5/: CMakeLists.txt  Commento_grafico.txt  Quicksort_migliorato.hpp  calcolo_tempo.cpp  sorts.hpp  test_Bubblesort.cpp  test_Insertionsort.cpp  test_Mergesort.cpp  test_Quicksort.cpp  test_Selectionsort.cpp
esercitazione8/: CMakeLists.txt  Grafi.hpp  main.cpp
